--- a/jd_extension/manager.html
+++ b/jd_extension/manager.html
@@ -9,6 +9,7 @@
             width: 100px;
             outline: none;
             margin: 3px;
+            background-color: cornsilk;
         }
         
         input {
@@ -28,7 +29,7 @@
     <script src="manager.js"></script>
 </head>
 
-<body>
+<body style="background-color:bisque">
 
     钢镚文件路径<input type="file" id="file" />
     <br/> 匹配符
