--- a/jd_extension/manager.html
+++ b/jd_extension/manager.html
@@ -33,7 +33,7 @@
 
     钢镚文件路径<input type="file" id="file" />
     <br/> 匹配符
-    <input type="text" id="matcher" /><label>*秘钥前面的标识符*</label>
+    <input type="text" id="matcher" /><label>*钢镚前面的标识符，为了识别钢镚。如：卡号：0180629019166密钥7126-F69E-1940-5F45，则“密钥”就是标识符*</label>
     <br/> 短信验证
     <input id="request_sms_true" type="radio" name="request_sms" value="true" />是
     <input id="request_sms_false" type="radio" name="request_sms" value="false" checked/>否
