--- a/jd_extension/manager.html
+++ b/jd_extension/manager.html
@@ -41,17 +41,18 @@
 
     <span id="phone_line">手机号<input type="text" id="phone" /></span>
     <br/>
-    <button id="start">开始</button><button id="reset">重置</button>
+    <button id="start">开始</button><button id="reset" value="stop" disabled>停止</button>
     <table border="1px" bordercolor="#000000" cellspacing="0px" style="border-collapse:collapse">
         <thead>
             <tr>
-                <th>序号</th>
+                <th style="width:5%;">序号</th>
                 <th>钢镚</th>
                 <th>兑换结果</th>
+                <th>兑换时间</th>
             </tr>
         </thead>
         <tbody id="jd_coin_info"></tbody>
     </table>
 </body>
 
-</html
+</html>
